[B]Version 1.1.151[/B]
- xfreehd - domain change, fix login